api keys pull, search profiles